--- a/Missing Data/Missing Data.Rmd
+++ b/Missing Data/Missing Data.Rmd
@@ -5,6 +5,7 @@ output:
   html_document:
     keep_md: true
 date: "2025-02-11"
+zotero: true
 bibliography: scholar.bib
 ---
 
@@ -15,6 +16,7 @@ library(visdat)
 library(naniar)
 library(mice)
 library(bookdown)
+library(VIM)
 ```
 # 1. **Dataset Exploration**  
    - Load the provided health administrative dataset.  
@@ -71,12 +73,12 @@ missing_table
 ```
 Although the proportion of missing data can influence statistical inference, there are no universally accepted guidelines for the maximum amount of missing data for which multiple imputation (MI) remains beneficial. One study suggests that when over 10% of data are missing, the estimates may become biased [@bennett2001can]. Another paper proposes 5% as a threshold, below which MI is unlikely to provide significant benefits [@schafer1999multiple]. However, limited evidence exists to support these cutoff points. Few studies have explored how bias and efficiency change with increasing levels of missing data, with the most extreme case being 50% missing data, which showed growing inconsistency in effect estimates as missingness increased [@mishra2014comparative] for the small sample. However, when both high missing data and large sample sizes are considered as missing data being at random (MAR) [@lee2012recovery]. In this analysis, I consider missing values with less than 50 percent in this dataset.
 
-let's review filter out all variables with more than 75% missing.
+let's review filter out all variables with more than 20% missin for make this analysis easy.
 
 
 ```{r}
 data <- data %>%
-          select(where(~sum(is.na(.x))/length(.x) < 0.50))
+          select(where(~sum(is.na(.x))/length(.x) < 0.20))
 
 missing_table <- miss_var_summary(data)
 ```
@@ -90,5 +92,34 @@ missing_table
 ```{r}
 gg_miss_upset(data, order.by = "freq", nsets = 10)
 ```
+
+2. **Apply Imputation Methods**  
+   - Select and apply at least three different methods for imputing missing data, such as:  
+     - Mean/Median/Mode imputation.
+Lets apply mice function to impute missing data by mean imputation. Here, we have select 1 imputation and 1 iteration. 
+```{r}
+set.seed(123)
+data_imp_mean <- mice(data, method = "mean", m = 1, maxit = 1)
+```
+     
+     - K-Nearest Neighbors (KNN) imputation. 
+
+KNN imputation replaces missing values based on the values of the nearest neighbors.
+
+Implementation:
+```{r}
+set.seed(456)
+imputed_data_KNN <- kNN(data, k = 3)  # k = number of nearest neighbors
+```
+     
+     - Multiple Imputation by Chained Equations (MICE). 
+     MICE is a robust method for handling missing data by creating multiple imputed datasets and combining the results. Here we consider 5 imputation (according to theory this sould be more thanb 20 ) and 5 number of iteration
+```{r}
+imputed_data_mice <- mice(data, m = 5, seed = 567, maxit=5)
+```
+     
+   - Document the implementation process for each method. 
+   
+   
 
 ## References
