--- a/Independent-Analysis-1/Independent Analysis-1.Rmd
+++ b/Independent-Analysis-1/Independent Analysis-1.Rmd
@@ -32,4 +32,139 @@ library(themis)
 library(microbenchmark)
 library(arsenal)
 library(workflows) 
+library(readxl)
 ```
+
+Data Wrangling
+
+Load your dataset and examine its structure.
+Perform cleaning tasks, including handling missing data, correcting inconsistencies, and ensuring appropriate data types.
+Prepare the dataset for analysis by creating or transforming variables as necessary.
+
+## Dataset Exploration 
+
+Load and examine **the synthetic cohort of ~100,000 patients**.
+```{r}
+
+data_synt <- read_excel("synthetic_data_stats_competition_2025_final.xlsx")
+
+```
+
+<!-- ```{r} -->
+<!-- # glimpse(data_synt) -->
+
+<!-- ``` -->
+
+
+**Check the structure of the dataset**
+
+```{r}
+
+dim(data_synt)
+
+df_info <- data.frame(
+  Variable = names(data_synt), 
+  Type = sapply(data_synt, class)  # Gets the data type of each variable
+)
+print(df_info, row.names = FALSE)  # Print full output
+
+```
+```{r}
+get_unique_values <- function(df, vars_to_exclude = NULL) {
+  # Initialize results dataframe
+  result <- data.frame(
+    Variable_Name = character(),
+    Unique_Values = character(),
+    Is_Boolean = logical(),
+    # Value_Count = integer(),
+    stringsAsFactors = FALSE
+  )
+  
+  # Get columns to analyze (excluding specified vars)
+  cols_to_analyze <- setdiff(names(df), vars_to_exclude)
+  
+  for (col in cols_to_analyze) {
+    # Get complete unique values (including NA)
+    unique_vals <- unique(df[[col]])
+    na_present <- any(is.na(unique_vals))
+    na_sum<-sum(is.na(df[[col]]))
+    na_sum_per<-((sum(is.na(df[[col]])))/length(df[[col]]))*100
+    
+    # Remove NA for boolean detection
+    clean_vals <- unique_vals[!is.na(unique_vals)]
+    val_count <- length(clean_vals)
+    
+    # Detect boolean variables (0/1 or 1/2 numeric)
+    is_boolean <- if (val_count <= 2 && is.numeric(df[[col]])) {
+      all(clean_vals %in% c(0, 1)) || all(clean_vals %in% c(1, 2))
+    } else {
+      FALSE
+    }
+    
+    # Prepare values for display
+    if (na_present) {
+      display_vals <- c(sort(clean_vals), NA)
+    } else {
+      display_vals <- sort(clean_vals)
+    }
+    
+    # Convert to character representation
+    char_vals <- sapply(display_vals, function(x) {
+      if (is.na(x)) "NA" else as.character(x)
+    })
+    
+    result <- rbind(result, data.frame(
+      Variable_Name = col,
+      Unique_Values = paste(char_vals, collapse = ", "),
+      Is_Boolean = is_boolean,
+      Value_Count = val_count,
+      missing=na_sum,
+      missing_per=na_sum_per,
+      stringsAsFactors = FALSE
+    ))
+  }
+  
+  return(result)
+}
+unique_values <- get_unique_values(data_synt)
+table(unique_values$Is_Boolean)
+
+```
+    138
+
+This is a synthetic cohort of 106747 unique patients with 
+
+In this health administrative dataset, there are 41,187 observations and 440 variables. Most of these variables are integers, numeric, or character, which makes sense. However, some variables are being treated as logical. Let’s identify those logical variables.
+
+
+**Missing Data Information**
+
+```{r}
+missing_table <- miss_var_summary(data_synt)
+missing_table
+```
+In this missing data **time_to_outcome_afib_aflutter_new_post** which is **Time from index 12 lead ECG to new onset atrial fibrillation/flutter**. This variable is blank if the patient did not develop the outcome and **time_to_outcome_all_cause_death** which is **Time from index 12 lead ECG to all cause death**. This variable is Blank if the patient did not die. So we can say that those missing is the conditional missing. so we can exclude them as a missing variables. 
+
+```{r}
+data_synt1 <- data_synt %>% 
+  select(-c(time_to_outcome_afib_aflutter_new_post,time_to_outcome_all_cause_death))
+
+vis_dat(data_synt1, warn_large_data = FALSE)
+
+gg_miss_upset(data_synt1, order.by = "freq", nsets = 2,  nintersects = 10)
+gg_miss_upset(data_synt1, order.by = "freq", nsets = 3,  nintersects = 10)
+gg_miss_upset(data_synt1, order.by = "freq", nsets = 4,  nintersects = 10)
+gg_miss_upset(data_synt1, order.by = "freq", nsets = 5,  nintersects = 10)
+gg_miss_upset(data_synt1, order.by = "freq", nsets = 6,  nintersects = 10)
+gg_miss_upset(data_synt1, order.by = "freq", nsets = 7,  nintersects = 10)
+gg_miss_upset(data_synt1, order.by = "freq", nsets = 8,  nintersects = 10)
+gg_miss_upset(data_synt1, order.by = "freq", nsets = 9,  nintersects = 10)
+gg_miss_upset(data_synt1, order.by = "freq", nsets = 10,  nintersects = 10)
+gg_miss_upset(data_synt1, order.by = "freq", nsets = 11,  nintersects = 10)
+
+# data_synt$time_to_outcome_afib_aflutter_new_post<-NULL
+# data_synt$outcome_all_cause_death<-NULL
+# data_synt$time_to_outcome_all_cause_death<-NULL
+```
+
+From this graph we can say that some specific variables which is the lab variables are missing. 
